--- a/haskell/curryrs.cabal
+++ b/haskell/curryrs.cabal
@@ -32,8 +32,8 @@ test-suite curryrs-test
                      , tasty-quickcheck >= 0.8.4
   -- We only have to do this because ghc-pkg doesn't work with relative paths for
   -- extra-lib-dirs.
-  ghc-options:         -L../rust/target/debug -lrtest
-  extra-libraries:     pthread
+  -- ghc-options:         -L../rust/target/debug
+  extra-libraries:     rtest, pthread, ../rust/target/debug
   default-language:    Haskell2010
 
 benchmark curryrs-bench
@@ -44,8 +44,8 @@ benchmark curryrs-bench
                      , curryrs
   -- We only have to do this because ghc-pkg doesn't work with relative paths for
   -- extra-lib-dirs.
-  ghc-options:         -L../rust/target/debug -lrtest
-  extra-libraries:     pthread
+  -- ghc-options:         -L../rust/target/debug
+  extra-libraries:     rtest, pthread, ../rust/target/debug
   default-language:    Haskell2010
 
 source-repository head
